# healthcare-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: main.py
data/: doctors.json  patients.json
env/: environment.py  models.py
graders/: easy_grader.py  hard_grader.py  medium_grader.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
templates/: index.html
