[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-openenv"
version = "0.1.0"
description = "AI-powered hospital scheduling system for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "openai",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["."]